--- a/src/styles/components/notification.scss
+++ b/src/styles/components/notification.scss
@@ -6,10 +6,10 @@
 }
 
 .notification {
-  background: aliceblue;
+  background: #212E4B;
   padding: 1rem;
   display: flex;
-  border-left: lightgreen 0.5rem solid;
+  border-left: #7ED321 0.5rem solid;
   margin-bottom: 1rem;
   border-radius: 0.5rem;
   font-size: 0.875rem;
