--- a/src/styles/components/stakeDistroBar.scss
+++ b/src/styles/components/stakeDistroBar.scss
@@ -5,18 +5,18 @@
   display: flex;
 
   .purple {
-    background-color: purple;
+    background-color: #445895;
   }
 
   .blue {
-    background-color: lightblue;
+    background-color: #68B5FA;
   }
 
   .green {
-    background-color: lightgreen;
+    background-color: #7ED321;
   }
 
   .grey {
-    background-color: grey;
+    background-color: #2B2F39;
   }
 }
