--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -12,7 +12,7 @@
     position: absolute;
     top: -0.75rem;
     right: 50%;
-    background: aliceblue;
+    background: #212E4B;
     padding: 0.5rem;
     transform: translate(100%, -100%);
     width: 15rem;
