--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -1,16 +1,19 @@
 .primary-btn {
   padding: 0.5rem 1rem;
-  background: #2291f3;
-  color: white;
+  background: #01D0FF;
+  color: #1D2434;
   font-weight: 600;
-  border-radius: 0.5rem;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  border-radius: 0.25rem;
   cursor: pointer;
   align-items: center;
   justify-content: center;
   display: flex;
 
   &.disabled {
-    background-color: lightgrey;
+    background-color: #01D0FF;
     cursor: auto;
+    opacity: 0.12;
   }
 }
