--- a/src/styles/components/headerTitle.scss
+++ b/src/styles/components/headerTitle.scss
@@ -2,16 +2,17 @@
   display: flex;
   align-items: center;
 
-  .logo-steak {
-    margin-right: 1rem;
-  }
-
   .title {
     font-size: 1.5rem;
     font-weight: 700;
+    line-height: 1.8rem;
+    color: #01D0FF;
   }
 
   .subtitle {
     font-size: 0.75rem;
+    font-weight: 700;
+    letter-spacing: 0.43px;
+    color: #ADB0B5;
   }
 }
