--- a/src/styles/components/nodeList.scss
+++ b/src/styles/components/nodeList.scss
@@ -6,23 +6,28 @@
     padding-top: 1.5rem;
     padding-bottom: 1rem;
 
+
     .instruction {
       flex: 1;
       padding-left: 0.75rem;
+      color: #ADB0B5;
+      font-size: 0.9rem;
+      font-weight: 900;
 
       &::before{
         content: '';
         display: inline-block;
-        width: 0.3rem;
-        height: 1rem;
+        width: 0.1875rem;
+        height: 0.75rem;
         transform: translate(-0.5rem, 0.1rem);
-        background-color: lightgreen;
+        background-color: #78C326;
       }
     }
 
     .legend-items {
       display: flex;
       font-size: 0.875rem;
+      color: #676767;
 
       .legend-item {
         margin-left: 2.5rem;
@@ -37,36 +42,42 @@
         }
 
         &.purple::before {
-          background-color: purple;
+          background-color: #445895;
         }
 
         &.blue::before {
-          background-color: lightblue;
+          background-color: #68B5FA;
         }
 
         &.green::before {
-          background-color: lightgreen;
+          background-color: #7ED321;
         }
 
         &.grey::before {
-          background-color: grey;
+          background-color: #2B2F39;
         }
       }
     }
   }
 
-  .current-stake-info .popup-container {
-    width: 16rem;
-  }
-
   .table-header,
   .odd-row {
-    background-color: aliceblue;
+    background-color: #293248;
   }
 
   .table-header {
     display: flex;
     padding: 0.5rem 1.25rem;
+    background-color: #293248;
+    color: #ADB0B5;
+    font-size: 0.875rem;
+    font-weight: 900;
+    padding-right: 4rem;
+  }
+
+  .popup-container {
+    width: 16rem;
+    background-color: #212E4B;
   }
 
   .table {
@@ -76,6 +87,7 @@
 
     .name {
       flex: 35%;
+      font-weight: 900;
     }
 
     .rewards {
@@ -91,7 +103,7 @@
       margin-right: 0.5rem;
 
       .my-stake {
-        color: lightgreen;
+        color: #7ED321;
         padding-left: 0.5rem;
 
         &::before{
@@ -101,7 +113,7 @@
           height: 0.75rem;
           border-radius: 0.375rem;
           transform: translateX(-0.375rem);
-          background-color: lightgreen;
+          background-color: #7ED321;
         }
       }
     }
@@ -116,6 +128,5 @@
     display: flex;
     align-items: center;
     padding: 1.25rem;
-    font-weight: 500;
   }
 }
